Fix tooltip on mobile

--- a/resources/assets/sass/modules/table.scss
+++ b/resources/assets/sass/modules/table.scss
@@ -1,9 +1,3 @@
-@keyframes tooltip-bounce {
-  0%   { transform: translate3d(-50%, 0, 0); }
-  50% { transform: translate3d(-50%, -8px, 0); }
-  100%   { transform: translate3d(-50%, 0, 0); }  
-}
-
 .table {
   margin: $spacing-vertical #{-$spacing-horizontal} 24px #{-$spacing-horizontal};
   display: flex;
@@ -27,14 +21,8 @@
       pointer-events: none;
       left: 50%;
       z-index: $initial-order;
-      animation: tooltip-bounce 4s $animation--timing infinite;
       transition: opacity $animation--duration $animation--timing,
                   visibility $animation--duration $animation--timing;
-
-      body:not(.safari) & {
-        margin-left: 0;
-        transform: translate3d(-50%, 0, 0);
-      }
     }
 
     &:before {
